--- a/Ben/Test/plotlyflask_tutorial/Templates/home.html
+++ b/Ben/Test/plotlyflask_tutorial/Templates/home.html
@@ -4,9 +4,9 @@
     <body class="dash-template">
         <header>
           <div class="nav-wrapper">
-            <a href="/">
+            <!-- <a href="/">
                 <h2>Awesomez Dashboard</h2>
-            </a>
+            </a> -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="/">Citibank</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,16 +24,16 @@
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" href="/dash2">News</a>
+            <a class="nav-link" href="/dash2">Client Portoflio</a>
           </li>
           
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
+            Analytics
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/dash1">Dash1</a>
-              <a class="dropdown-item" href="/dash2">Dash2</a>
+              <a class="dropdown-item" href="/dash1">Sentiment</a>
+              <a class="dropdown-item" href="/dash2">Prediction</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
