prototype ready for mid terms

--- a/Ben/Test/plotlyflask_tutorial/Templates/home.html
+++ b/Ben/Test/plotlyflask_tutorial/Templates/home.html
@@ -16,16 +16,13 @@
         <ul class="navbar-nav mr-auto">
           
           <li class="nav-item active">
-            <a class="nav-link" href="/dash1">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/dash1">Client Portoflio <span class="sr-only">(current)</span></a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/dash2">Stocks</a>
+            <a class="nav-link" href="/dash2">Data Table</a>
           </li>
-          
-          <li class="nav-item">
-            <a class="nav-link" href="/dash2">Client Portoflio</a>
-          </li>
+  
           
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -43,7 +40,7 @@
         </div>
         </header>
 
-        WELCOME BIJJJ~~
+        PROTOTYPE TESTING
 
      
 
