--- a/Ben/Assets/style.css
+++ b/Ben/Assets/style.css
@@ -1,149 +1,149 @@
 .container {
-    position: relative;
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 0 20px;
-    box-sizing: border-box;
-  }
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
 
-  body {
-    background-color: #f2f2f2;
-    margin: 5%;
-  }
+body {
+  background-color: #f2f2f2;
+}
 
 .mini_container {
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    margin: 10px;
-    padding: 10px;
-    position: relative;
-    box-shadow: 2px 2px 2px lightgrey;
-  }
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  margin: 10px;
+  padding: 10px;
+  position: relative;
+  box-shadow: 2px 2px 2px lightgrey;
+}
 
-  #ticker_info_table {
-    border-radius: 5px;
-    width: 429px;
-    height: 95px;
-    background-color: #f9f9f9;
-    margin: 10px;
-    padding: 10px;
-    position: relative;
-    box-shadow: 2px 2px 2px lightgrey;
-  }
-  .tick_metrics {
-    background-color: #3a3f44;
-    box-shadow: 2px 2px 2px lightgrey;
-    border-radius: 5px;
-    height: 95px;
-    width: 140px;
-    margin: 10px;
-    padding: 10px;
-    color: white;
-    font-size: 30px;
-    text-align: center;
-  }
+#ticker_info_table {
+  border-radius: 5px;
+  width: 429px;
+  height: 95px;
+  background-color: #f9f9f9;
+  margin: 10px;
+  padding: 10px;
+  position: relative;
+  box-shadow: 2px 2px 2px lightgrey;
+}
+.tick_metrics {
+  background-color: #3a3f44;
+  box-shadow: 2px 2px 2px lightgrey;
+  border-radius: 5px;
+  height: 95px;
+  width: 140px;
+  margin: 10px;
+  padding: 10px;
+  color: white;
+  font-size: 30px;
+  text-align: center;
+}
 
-   #tic_price_info {
-    display: inline-flex;
-  }
+ #tic_price_info {
+  display: inline-flex;
+}
 
-  #close_price {
-    font-size: 35px;
-  }
+#close_price {
+  font-size: 35px;
+}
 
-  #price_date {
-    font-size:12px;
-    margin: 0px;
-    margin-left: 10px;
-  }
+#price_date {
+  font-size:12px;
+  margin: 0px;
+  margin-left: 10px;
+}
 
-  #price_diff {
-    font-size: 18px;
-    margin-top:17px;
-    margin-left:8px;
-  }
+#price_diff {
+  font-size: 18px;
+  margin-top:17px;
+  margin-left:8px;
+}
 
-  .search_style {
-    margin-left: 10px;
-    border-radius: 5px;
-  }
-  .container-display {
-    display: flex;
-  }
+.search_style {
+  margin-left: 10px;
+  border-radius: 5px;
+}
+.container-display {
+  display: flex;
+}
 
-  .flex-display {
-    display: flex;
-  }
+.flex-display {
+  display: flex;
+}
 
-  .column,
-  .columns {
-    margin-left: 4%;
-  }
+.column,
+.columns {
+  margin-left: 4%;
+}
 
 .four.columns {
 width: 30.6666666667%;
 }
 
 #right-column {
-    display: flex;
-    flex-direction: column;
-  }
+  display: flex;
+  flex-direction: column;
+}
 
 #tabs {
-    width: 400px;   
+  width: 400px;   
 }
 
 .control-tab {
-  max-height: 380px;
-  max-width: 400px;
-  padding: 10px;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  position: relative;
+max-height: 380px;
+max-width: 400px;
+padding: 10px;
+border-radius: 5px;
+background-color: #f9f9f9;
+position: relative;
 }
 
 .tabs_group{
-  height: 450px;
-  width: 420px;
-  margin: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 10px;
-  padding-bottom: 15px;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  position: relative;
-  box-shadow: 2px 2px 2px lightgrey;
+height: 450px;
+width: 420px;
+margin: 10px;
+padding-left: 15px;
+padding-right: 15px;
+padding-top: 10px;
+padding-bottom: 15px;
+border-radius: 5px;
+background-color: #f9f9f9;
+position: relative;
+box-shadow: 2px 2px 2px lightgrey;
 }
 
 
 #SIDEBAR
 #sidebar {
-  text-align: center;
-  padding: 2rem 1rem;
-  background-color: #f8f9fa;
+text-align: center;
+padding: 2rem 1rem;
+background-color: #f8f9fa;
 }
 
 #sidebar h2 {
-  text-align: left;
-  margin-bottom: 0;
+text-align: left;
+margin-bottom: 0;
 }
 
 #sidebar_title {
-  margin-left: 13px;
-  margin-top : 20px;
+margin-left: 13px;
+margin-top : 30px;
 }
 
 /* Hide the blurb on a small screen */
 #blurb {
-  display: none;
-  margin: 0px;
-  margin-bottom: 12px;
+display: none;
+margin: 0px;
+margin-bottom: 12px;
 }
 
 #sidebar-toggle {
-  display: none;
+display: none;
+margin-top: 20px;
 }
 
 #collapse *:first-child {
@@ -152,377 +152,397 @@ width: 30.6666666667%;
 
 /* add the three horizontal bars icon for the toggle */
 .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
 #page-content {
-  padding: 2rem 1rem;
+padding: 2rem 1rem;
 }
 
 @media (min-width: 48em) {
-  #sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 20rem;
-    text-align: left;
-    transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
-  }
+#sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 20rem;
+  text-align: left;
+  transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
+  margin-top: 40px;
+}
 
-  #sidebar-toggle {
-    display: inline-block;
-    position: relative;
-    top: 0;
-    transition: top 0.3s ease-in-out;
-  }
+#sidebar-toggle {
+  display: inline-block;
+  position: relative;
+  top: 0;
+  transition: top 0.3s ease-in-out;
+}
 
-  /* add negative margin to sidebar to achieve the collapse */
-  #sidebar.collapsed {
-    margin-left: -15.5rem;
-    padding-right: 0.5rem;
-  }
+/* add negative margin to sidebar to achieve the collapse */
+#sidebar.collapsed {
+  margin-left: -15.5rem;
+  padding-right: 0.5rem;
+}
 
-  /* move the sidebar toggle up to the top left corner */
-  #sidebar.collapsed #sidebar-toggle {
+/* move the sidebar toggle up to the top left corner */
+#sidebar.collapsed #sidebar-toggle {
 
-  }
+}
 
-  /* also adjust margin of page content */
-  #sidebar.collapsed ~ #page-content {
-    margin-left: 1.5rem;
-  }
+/* also adjust margin of page content */
+#sidebar.collapsed ~ #page-content {
+  margin-left: 4rem;
+}
 
-  /* move all contents of navbar other than header (containing toggle) further
-     off-screen */
-  #sidebar.collapsed > *:not(:first-child) {
-    margin-left: -6rem;
-    margin-right: 6rem;
-  }
+/* move all contents of navbar other than header (containing toggle) further
+   off-screen */
+#sidebar.collapsed > *:not(:first-child) {
+  margin-left: -6rem;
+  margin-right: 6rem;
+}
 
-  /* reveal the blurb on a large screen */
-  #blurb {
-    display: block;
-  }
+/* reveal the blurb on a large screen */
+#blurb {
+  display: block;
+}
 
-  /* Hide the toggle on a large screen */
-  #navbar-toggle {
-    display: none;
-  }
+/* Hide the toggle on a large screen */
+#navbar-toggle {
+  display: none;
+}
 
-  #collapse {
-    display: block;
-  }
+#collapse {
+  display: block;
+}
 
-  /* set margins of the main content so that it doesn't overlap the sidebar */
-  #page-content {
-    margin-left: 17rem;
-    margin-right: 2rem;
-    transition: margin-left 0.3s ease-in-out;
-  }
+/* set margins of the main content so that it doesn't overlap the sidebar */
+#page-content {
+  margin-left: 20rem;
+  margin-right: 2rem;
+  transition: margin-left 0.3s ease-in-out;
+}
 }
 
 #assest_dropdown {
-  font-family: 'Lato', sans-serif;
-  font-size: 0.7vw;
+font-family: 'Lato', sans-serif;
+font-size: 0.7vw;
 }
 
 #main_table {
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  padding: 20px;
-  padding-bottom: 45px;
-  box-shadow: 2px 2px 2px lightgrey;
-  width: 1385px;
-  margin-top: 4px;
+border-radius: 5px;
+background-color: #f9f9f9;
+padding: 20px;
+padding-bottom: 45px;
+box-shadow: 2px 2px 2px lightgrey;
+width: 1390px;
+margin-top: 4px;
 }
 
 #main_table .row {
-  margin: 0;
+margin: 0;
 }
 
 #client_coy_table .row {
-  margin: 0;
+margin: 0;
 }
 #stats_table {
-  background-color: lightgrey;
+background-color: lightgrey;
 }
 #stats_table .row {
-  margin: 0;
+margin: 0;
 }
 
 .fin_bar_group {
-  display: inline-flex;
-  width: 444px;
-  height: 370px;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  box-shadow: 2px 2px 2px lightgrey;
-  padding:0px;
-  margin-left: 13px;
+display: inline-flex;
+width: 444px;
+height: 370px;
+border-radius: 5px;
+background-color: #f9f9f9;
+box-shadow: 2px 2px 2px lightgrey;
+padding:0px;
+margin-left: 13px;
 }
 
+
 #coy_desc {
-  padding:10px;
-  height: 350px;
-  overflow-y: auto;
+padding:10px;
+height: 350px;
+overflow-y: auto;
 }
 
 #client_checkbox {
-  overflow-y: auto;
-  max-height: 230px;
-  width: 170px;
-  background-color:white;
-  border-radius: 5px;
-  /* border-style: solid;
-  border-width: 2px; */
-  padding: 8px;
-  zoom: 0.8;
-  font-size: 14px;
-  margin-right: 10px;
+overflow-y: auto;
+max-height: 200px;
+width: 170px;
+background-color:white;
+border-radius: 5px;
+/* border-style: solid;
+border-width: 2px; */
+padding: 8px;
+zoom: 0.8;
+font-size: 14px;
+margin-right: 10px;
 }
 
 #ccy_checkbox {
-  overflow-y: auto;
-  max-height: 180px;
-  width: 170px;
-  background-color:white;
-  border-radius: 5px;
-  /* border-style: solid;
-  border-width: 2px; */
-  padding: 8px;
-  zoom: 0.8;
-  font-size: 14px;
-  margin-right: 10px;
+overflow-y: auto;
+max-height: 150px;
+width: 170px;
+background-color:white;
+border-radius: 5px;
+/* border-style: solid;
+border-width: 2px; */
+padding: 8px;
+zoom: 0.8;
+font-size: 14px;
+margin-right: 10px;
 }
 
 .checkbox_words {
-  margin-top: 5px;
-  font-size: 10px;
+margin-top: 5px;
+font-size: 10px;
 }
 
 #base_checkbox {
-  overflow-y: auto;
-  overflow-x: hidden;
-  max-height: 230px;
-  max-width: 170px;
-  background-color:white;
-  border-radius: 5px;
-  /* border-style: solid;
-  border-width: 2px; */
-  padding: 8px;
-  zoom: 0.8;
-  font-size: 14px;
-  white-space: nowrap;
+overflow-y: auto;
+overflow-x: hidden;
+max-height: 200px;
+max-width: 170px;
+background-color:white;
+border-radius: 5px;
+/* border-style: solid;
+border-width: 2px; */
+padding: 8px;
+zoom: 0.8;
+font-size: 14px;
+white-space: nowrap;
 }
 
 #asset_checkbox {
-  overflow-y: auto;
-  overflow-x: hidden;
-  max-height: 200px;
-  max-width: 170px;
-  background-color:white;
-  border-radius: 5px;
-  /* border-style: solid;
-  border-width: 2px; */
-  padding: 8px;
-  zoom: 0.8;
-  font-size: 14px;
-  white-space: nowrap;
-  margin-right: 10px;
+overflow-y: auto;
+overflow-x: hidden;
+max-height: 200px;
+max-width: 170px;
+background-color:white;
+border-radius: 5px;
+/* border-style: solid;
+border-width: 2px; */
+padding: 8px;
+zoom: 0.8;
+font-size: 14px;
+white-space: nowrap;
+margin-right: 10px;
 }
 
 #sub_asset_checkbox {
-  overflow-y: auto;
-  overflow-x: hidden;
-  height: 200px;
-  width: 170px;
-  background-color:white;
-  border-radius: 5px;
-  /* border-style: solid;
-  border-width: 2px; */
-  padding: 8px;
-  zoom: 0.8;
-  font-size: 14px;
-  white-space: nowrap;
+overflow-y: auto;
+overflow-x: hidden;
+height: 200px;
+width: 170px;
+background-color:white;
+border-radius: 5px;
+/* border-style: solid;
+border-width: 2px; */
+padding: 8px;
+zoom: 0.8;
+font-size: 14px;
+white-space: nowrap;
 }
 
 .all_clear_btn{
-  width: 32px;
-  height: 20px;
-  font-size: 8px;
+width: 32px;
+height: 20px;
+font-size: 8px;
+margin-bottom: 5px;
+margin-left: 5px;
+}
+
+#main_select_btn {
+  margin-left: 10px;
   margin-bottom: 5px;
-  margin-left: 5px;
+  width: 70px;
+  height: 25px;
+  font-size: 12px;
+}
+
+#main_clear_btn {
+  margin-left: 10px;
+  margin-bottom: 5px;
+  width: 70px;
+  height: 25px;
+  font-size: 12px;
 }
 
 #client_fitler_box {
-  display: inline-flex;
-  margin-left: 13px;
+display: inline-flex;
+margin-left: 13px;
 }
 
 #base_fitler_box {
-  display: inline-flex;
-  margin-left: 16px;
+display: inline-flex;
+margin-left: 16px;
 }
 
 #asset_fitler_box {
-  display: inline-flex;
-  margin-left: 13px;
-  margin-top: 10px;
+display: inline-flex;
+margin-left: 13px;
+margin-top: 10px;
 }
 
 #asset_sub_fitler_box {
-  display: inline-flex;
-  margin-left: 16px;
-  margin-top: 10px;
+display: inline-flex;
+margin-left: 16px;
+margin-top: 10px;
 }
 
 #ccy_filter_box {
-  display: inline-flex;
-  margin-left: 13px;
-  margin-top: 10px;
+display: inline-flex;
+margin-left: 13px;
+margin-top: 10px;
 }
 
 #ccy_to_ccy_filter_box {
-  display: inline-flex;
-  margin-left: 13px;
+display: inline-flex;
+margin-left: 13px;
 }
 
 #base_clear_btn {
-  margin-left: 14px;
+margin-left: 14px;
 }
 
 #client_to_base_filter_box {
-  display: inline-flex;
-  margin-left:10px;
+display: inline-flex;
+margin-left:10px;
 }
 
 #Asset_to_Sub_filter_box {
-  display: inline-flex;
-  margin-left:10px;
+display: inline-flex;
+margin-left:10px;
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+width: 5px;
+height: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 5px;
+border-radius: 5px;
 }
 
 #collapse ::-webkit-scrollbar {
-  background-color:#C0C0C0	 !important;
+background-color:#C0C0C0	 !important;
 }
 #collapse ::-webkit-scrollbar-thumb {
-  background-color: #2F4F4F !important;
-  /*border: 2px solid #2F4F4F;*/
+background-color: #2F4F4F !important;
+/*border: 2px solid #2F4F4F;*/
 }
 
 #main_table ::-webkit-scrollbar {
-  background-color:#C0C0C0	 !important;
+background-color:#C0C0C0	 !important;
 }
 
 #main_table ::-webkit-scrollbar-thumb {
-  background-color: #2F4F4F !important;
-  /*border: 2px solid #2F4F4F;*/
+background-color: #2F4F4F !important;
+/*border: 2px solid #2F4F4F;*/
 }
 
 .control-tab ::-webkit-scrollbar-thumb {
-  background-color: #2F4F4F !important;
+background-color: #2F4F4F !important;
 }
 
 .control-tab ::-webkit-scrollbar-thumb {
-  background-color: #2F4F4F !important;
-  /*border: 2px solid #2F4F4F;*/
+background-color: #2F4F4F !important;
+/*border: 2px solid #2F4F4F;*/
 }
 
 #top_client_table ::-webkit-scrollbar {
-  background-color:#C0C0C0	 !important;
+background-color:#C0C0C0	 !important;
 }
 
 #top_client_table  ::-webkit-scrollbar-thumb {
-  background-color: #2F4F4F !important;
-  /*border: 2px solid #2F4F4F;*/
+background-color: #2F4F4F !important;
+/*border: 2px solid #2F4F4F;*/
 }
 
 #top_coy_table ::-webkit-scrollbar {
-  background-color:#C0C0C0	 !important;
+background-color:#C0C0C0	 !important;
 }
 
 #top_coy_table ::-webkit-scrollbar-thumb {
-  background-color: #2F4F4F !important;
+background-color: #2F4F4F !important;
 }
 
 
 #fin_modal ::-webkit-scrollbar {
-  background-color:#C0C0C0	 !important;
+background-color:#C0C0C0	 !important;
 }
 
 #fin_modal ::-webkit-scrollbar-thumb{
-  background-color: #2F4F4F !important;
+background-color: #2F4F4F !important;
 }
 
 
 
 #testingzz {
-  background-color: #2F4F4F;
-  border-radius: 20px;
-  width: 300px;
-  padding: 20px;
+background-color: #2F4F4F;
+border-radius: 20px;
+width: 300px;
+padding: 20px;
 }
 
 #banner_group {
-  display: flex;
+display: flex;
+margin-left:5%;
 }
 
 #client_table .row {
-  margin: 0;
+margin: 0;
 }
 
 #coy_table .row {
-  margin: 0;
+margin: 0;
 }
 
 .client_metrics {
-    background-color: #3a3f44;
-    box-shadow: 2px 2px 2px lightgrey;
-    border-radius: 5px;
-    height: 90px;
-    width: 220px;
-    margin: 30px;
-    padding: 10px;
-    color: white;
-    text-align: center;
+  background-color: #3a3f44;
+  box-shadow: 2px 2px 2px lightgrey;
+  border-radius: 5px;
+  height: 90px;
+  width: 220px;
+  margin: 30px;
+  padding: 10px;
+  color: white;
+  text-align: center;
 }
 
 #modal_header {
-  display:inline-flex;
+display:inline-flex;
 }
 
 #top_client_table {
-  box-shadow: 2px 2px 2px lightgrey;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  margin:20px;
-  margin-top:10px;
-  width: 650px;
-  padding: 20px;
+box-shadow: 2px 2px 2px lightgrey;
+border-radius: 5px;
+background-color: #f9f9f9;
+margin:28px;
+margin-top:10px;
+margin-left:8%;
+width: 650px;
+padding: 20px;
 }
 
 #combine_home_tables {
-  display: inline-flex;
+display: inline-flex;
 }
 
 #top_coy_table {
-  box-shadow: 2px 2px 2px lightgrey;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  box-shadow: 2px 2px 2px lightgrey;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  margin:20px;
-  margin-top:10px;
-  width: 650px;
-  padding: 20px;
+box-shadow: 2px 2px 2px lightgrey;
+border-radius: 5px;
+background-color: #f9f9f9;
+box-shadow: 2px 2px 2px lightgrey;
+border-radius: 5px;
+background-color: #f9f9f9;
+margin:20px;
+margin-top:10px;
+width: 650px;
+padding: 20px;
 }
