--- a/Ben/Assets/style.css
+++ b/Ben/Assets/style.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+#connectgraph {
+  width: 60%;
+  background-color: blue;
+  padding:1%;
+}
+
 body {
   background-color: #f2f2f2;
 }
